--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,14 @@ body {
     margin: 0px;
     background-color: hsl(257, 40%, 49%);
     font-family: "Open Sans", sans-serif;
+    height: 100%;
+    background-image: url("images/bg-desktop.svg");
+    background-repeat: no-repeat;
+    background-size: auto 122%;
 }
 
 section {
-    border: solid black 2px;
+    /* border: solid black 2px; */
     margin-top: 3rem;
     margin-left: 3rem;
     margin-right: 3rem;
@@ -17,21 +21,20 @@ section {
 
 article {
     margin: 3rem;
-    border: solid black 2px;
+    /* border: solid black 2px; */
     text-align: center;
-    /* min-height: 50vh; */
 }
 
 .left {
     display: inline-block;
-    border: solid black 2px;
+    /* border: solid black 2px; */
     width: 49%;
     margin-top: 3rem;
 }
 
 .right {
     display: inline-block;
-    border: solid black 2px;
+    /* border: solid black 2px; */
     width: 49%;
     text-align: left;
     color: white;
@@ -41,14 +44,16 @@ article {
 
 p.text {
     width: 50ch;
+    font-size: 1.1rem;
 }
 
 p.title {
-    font-size: 37px;
+    font-size: 2.5rem;
     margin: 0px;
+    font-family: "Poppins", sans-serif;
 }
 
-button {
+button:hover {
     padding: 0.8rem 3rem 0.8rem 3rem;
     background-color: hsl(300, 69%, 71%);
     border: none;
@@ -56,4 +61,27 @@ button {
     text-align: center;
     border-radius: 25px;
     font-family: "Open Sans", sans-serif;
+    box-shadow: 0px 5px 15px #111;
+    transform: translateY(-3px);
+}
+
+button {
+    padding: 0.8rem 3rem 0.8rem 3rem;
+    background-color: #eee;
+    border: none;
+    color: hsl(257, 40%, 49%);
+    text-align: center;
+    border-radius: 25px;
+    font-family: "Open Sans", sans-serif;
+    box-shadow: 0px 3px 15px #111;
+    transition: all 0.3s ease 0s;
+}
+
+footer {
+    text-align: center;
+    color: black;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: hsl(300, 69%, 71%);
 }
