--- a/styles.css
+++ b/styles.css
@@ -1,87 +1,112 @@
+:root {
+    --color-primary: hsl(257, 40%, 49%);
+    --color-accent: hsl(300, 69%, 71%);
+    --color-neutral: white;
+
+    --ff-heading: "Poppins", sans-serif;
+    --ff-body: "Open Sans", sans-serif;
+}
+
 * {
     box-sizing: border-box;
 }
 
 body {
-    margin: 0px;
-    background-color: hsl(257, 40%, 49%);
-    font-family: "Open Sans", sans-serif;
-    height: 100%;
+    margin: 0;
+    background-color: var(--color-primary);
     background-image: url("images/bg-desktop.svg");
     background-repeat: no-repeat;
-    background-size: auto 122%;
+    background-size: 100%;
 }
 
-section {
-    /* border: solid black 2px; */
-    margin-top: 3rem;
-    margin-left: 3rem;
-    margin-right: 3rem;
+.container {
+    width: min(90%, 100rem);
+    margin: 3rem auto;
 }
 
-article {
-    margin: 3rem;
-    /* border: solid black 2px; */
+.center {
     text-align: center;
 }
 
-.left {
-    display: inline-block;
-    /* border: solid black 2px; */
-    width: 49%;
-    margin-top: 3rem;
+h1 {
+    font-family: var(--ff-heading);
+    font-weight: 600;
+    font-size: 1.8rem;
+    color: var(--color-neutral);
 }
 
-.right {
-    display: inline-block;
-    /* border: solid black 2px; */
-    width: 49%;
-    text-align: left;
-    color: white;
-    vertical-align: top;
-    margin-top: 6rem;
-}
-
-p.text {
-    width: 50ch;
-    font-size: 1.1rem;
-}
-
-p.title {
-    font-size: 2.5rem;
-    margin: 0px;
-    font-family: "Poppins", sans-serif;
-}
-
-button:hover {
-    padding: 0.8rem 3rem 0.8rem 3rem;
-    background-color: hsl(300, 69%, 71%);
-    border: none;
-    color: white;
-    text-align: center;
-    border-radius: 25px;
-    font-family: "Open Sans", sans-serif;
-    box-shadow: 0px 5px 15px #111;
-    transform: translateY(-3px);
+p {
+    font-family: var(--ff-body);
+    font-weight: 400;
+    font-size: 1.2rem;
+    color: var(--color-neutral);
+    width: 33ch;
+    margin: 0 auto;
 }
 
 button {
-    padding: 0.8rem 3rem 0.8rem 3rem;
-    background-color: #eee;
+    font-size: 1.1rem;
+    padding: 0.8em 4em;
+    background-color: var(--color-neutral);
     border: none;
-    color: hsl(257, 40%, 49%);
+    color: var(--color-primary);
+    margin: 1.5em 0;
     text-align: center;
     border-radius: 25px;
-    font-family: "Open Sans", sans-serif;
     box-shadow: 0px 3px 15px #111;
     transition: all 0.3s ease 0s;
 }
 
+button:hover {
+    background-color: var(--color-accent);
+    color: var(--color-neutral);
+    box-shadow: 0px 5px 15px #111;
+    transform: translateY(-5px);
+}
+
+header > img {
+    width: 10rem;
+}
+
+div > img {
+    width: max(50%, 25rem);
+}
+
+p.attribution {
+    font-size: medium;
+    width: 100%;
+    color: black;
+}
+
 footer {
     text-align: center;
-    color: black;
     position: fixed;
     bottom: 0;
     width: 100%;
-    background-color: hsl(300, 69%, 71%);
+    background-color: var(--color-neutral);
+}
+
+@media (min-width: 1000px) {
+    .split {
+        display: flex;
+        justify-content: center;
+        gap: 2rem;
+    }
+
+    .center {
+        text-align: left;
+    }
+
+    p {
+        width: 50ch;
+        font-size: 1rem;
+    }
+
+    div > img {
+        width: max(100%, 25rem);
+    }
+
+    /* body {
+        background-size: 100%;
+    } */
 }
